--- a/site/en/tutorials/quickstart/beginner.ipynb
+++ b/site/en/tutorials/quickstart/beginner.ipynb
@@ -116,10 +116,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "0trJmd6DjqBZ",
-        "outputId": "44dc3913-dd3f-4533-c644-66b0b981cd6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "44dc3913-dd3f-4533-c644-66b0b981cd6f"
       },
       "outputs": [
         {
@@ -152,11 +152,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "7FP5258xjs-v"
+        "id": "7FP5258xjs-v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a0c0b9c3-96c0-4ec1-f0b3-94a08318453a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+          ]
+        }
+      ],
       "source": [
         "mnist = tf.keras.datasets.mnist\n",
         "\n",
@@ -177,11 +190,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "h3IKyzTCDNGo"
+        "id": "h3IKyzTCDNGo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d96d1430-3d03-4900-d164-443b2b6e0345"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/reshaping/flatten.py:37: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(**kwargs)\n"
+          ]
+        }
+      ],
       "source": [
         "model = tf.keras.models.Sequential([\n",
         "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
@@ -204,11 +230,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "OeOrNdnkEEcR"
+        "id": "OeOrNdnkEEcR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10232c02-e0c4-4fd1-c9b5-1b95cc0dee90"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.5934253 ,  0.02575806, -0.589794  , -0.2790676 , -0.5062502 ,\n",
+              "         0.16055986, -0.5357553 ,  0.18358853,  0.38971728,  0.94995254]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
       "source": [
         "predictions = model(x_train[:1]).numpy()\n",
         "predictions"
@@ -225,11 +268,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "zWSRnQ0WI5eq"
+        "id": "zWSRnQ0WI5eq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be56a3aa-bc26-4fe2-925d-af659aac3b17"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.05253613, 0.09758118, 0.05272726, 0.07194191, 0.05732153,\n",
+              "        0.11166311, 0.05565497, 0.11426441, 0.14042084, 0.24588872]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
       "source": [
         "tf.nn.softmax(predictions).numpy()"
       ]
@@ -254,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "RSkzdv8MD0tT"
       },
@@ -276,11 +336,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "NJWqEVrrJ7ZB"
+        "id": "NJWqEVrrJ7ZB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b89c4630-04f8-4dfc-ed6c-281c818df503"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float32(2.1922688)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
       "source": [
         "loss_fn(y_train[:1], predictions).numpy()"
       ]
@@ -296,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "9foNKHzTD2Vo"
       },
@@ -320,11 +395,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "y7suUbJXVLqP"
+        "id": "y7suUbJXVLqP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3dd9d254-65fc-4039-c3f5-8c61ea57904b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - accuracy: 0.8616 - loss: 0.4841\n",
+            "Epoch 2/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - accuracy: 0.9554 - loss: 0.1521\n",
+            "Epoch 3/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - accuracy: 0.9671 - loss: 0.1101\n",
+            "Epoch 4/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.9745 - loss: 0.0862\n",
+            "Epoch 5/5\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - accuracy: 0.9773 - loss: 0.0706\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7a8331ebbbc0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
       "source": [
         "model.fit(x_train, y_train, epochs=5)"
       ]
@@ -340,11 +446,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "F7dTAzgHDUh7"
+        "id": "F7dTAzgHDUh7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad947614-7b4d-4e4c-feac-e27fd3fbe13e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 - 0s - 1ms/step - accuracy: 0.9792 - loss: 0.0695\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.06949081271886826, 0.979200005531311]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ],
       "source": [
         "model.evaluate(x_test,  y_test, verbose=2)"
       ]
@@ -369,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "rYb6DrEH0GMv"
       },
@@ -383,11 +511,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "cnqOZtUp1YR_"
+        "id": "cnqOZtUp1YR_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3cfc22d8-8125-46b3-bfa6-7a5f8ca0bd76"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(5, 10), dtype=float32, numpy=\n",
+              "array([[7.83062060e-09, 5.17464116e-08, 4.87276202e-06, 1.81936892e-04,\n",
+              "        3.27647978e-11, 5.19006392e-07, 1.18023701e-13, 9.99799788e-01,\n",
+              "        5.85169118e-07, 1.21432749e-05],\n",
+              "       [4.07397245e-08, 2.16045082e-05, 9.99921322e-01, 1.85610206e-05,\n",
+              "        1.10871903e-13, 3.61158636e-05, 2.72261389e-07, 3.77134747e-11,\n",
+              "        2.17833940e-06, 7.34986117e-12],\n",
+              "       [3.92570243e-08, 9.99637127e-01, 4.21347031e-05, 4.59246621e-06,\n",
+              "        1.64125522e-05, 3.64611174e-06, 1.19369815e-05, 2.29842291e-04,\n",
+              "        5.39472567e-05, 3.13416365e-07],\n",
+              "       [9.99566138e-01, 6.46269649e-10, 7.93249055e-05, 3.09151119e-06,\n",
+              "        1.98828311e-05, 1.07830483e-05, 3.02349305e-04, 6.82341351e-07,\n",
+              "        1.24329503e-07, 1.75751065e-05],\n",
+              "       [6.08583241e-06, 6.61454832e-12, 4.97989204e-05, 1.11627756e-08,\n",
+              "        9.99789417e-01, 3.90752604e-08, 9.21499691e-07, 1.12876787e-05,\n",
+              "        3.71297631e-07, 1.42061457e-04]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ],
       "source": [
         "probability_model(x_test[:5])"
       ]
